--- a/about.html
+++ b/about.html
@@ -14,46 +14,47 @@
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
     crossorigin="anonymous"/>
 </head>
+
 <body class="bg-dark text-light">
-  <header class="contanier-fluid">
+  <header class="container-fluid">
 
-      <nav class="navbar fixed-top navbar-dark">
-        <a class="navbar-brand" href="#">Simon<sup>&reg;</sup></a>
-        <menu class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="play.html">Play</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="scores.html">Scores</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="about.html">About</a>
-          </li>
-        </menu>
-    </nav>
+    <nav class="navbar fixed-top navbar-dark">
+      <a class="navbar-brand" href="#">Simon<sup>&reg;</sup></a>
+      <menu class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="play.html">Play</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="scores.html">Scores</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="about.html">About</a>
+        </li>
+      </menu>
+  </nav>
   </header>
-
-    <main class="container-fluid bg-secondary text-center">
-        <p>
-        Simon is a repetitive memory game where you follow the demonstrated
-        color sequence until you make a mistake. The longer the sequence you
-        repeat, the greater your score.
-        </p>
-        <p>
-        The name Simon is a registered trademark owned by Milton-Bradley. Our
-        use of the name and the game is for non-profit educational use only. No
-        part of this code or program should be used outside of that definition.
-        </p>
-    </main>
-
-    <footer>
-        <hr/>
-        <span class="text-reset">Freddy </span>
-        <br/>
-        <a href="https://github.com/Freddy-Rios/simon.git">GitHub</a>
-    </footer>
+  <main class="container-fluid bg-secondary text-center">
+    <p>
+    Simon is a repetitive memory game where you follow the demonstrated
+    color sequence until you make a mistake. The longer the sequence you
+    repeat, the greater your score.
+    </p>
+    <p>
+    The name Simon is a registered trademark owned by Milton-Bradley. Our
+    use of the name and the game is for non-profit educational use only. No
+    part of this code or program should be used outside of that definition.
+    </p>
+  </main>
+  <footer class="bg-dark text-dark text-muted">
+    <div class="container-fluid">
+      <span class="text-reset">Freddy </span>
+      <a 
+      class="text-reset"
+      href="https://github.com/Freddy-Rios/simon.git">GitHub</a>
+    </div>
+  </footer>
 </body>
 </html>
