--- a/index.html
+++ b/index.html
@@ -15,42 +15,46 @@
     crossorigin="anonymous"/>
 </head>
 <body class="bg-dark text-light">
-    <header class="contanier-fluid">
+  <header class="container-fluid">
 
-      <nav class="navbar fixed-top navbar-dark">
-        <a class="navbar-brand" href="#">Simon<sup>&reg;</sup></a>
-        <menu class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="play.html">Play</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="scores.html">Scores</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="about.html">About</a>
-          </li>
-        </menu>
-    </nav>
-    </header>
+    <nav class="navbar fixed-top navbar-dark">
+      <a class="navbar-brand" href="#">Simon<sup>&reg;</sup></a>
+      <menu class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="play.html">Play</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="scores.html">Scores</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="about.html">About</a>
+        </li>
+      </menu>
+  </nav>
+  </header>
     
-    <main>
+    <main class="container-fluid bg-secondary text-center">
+      <div>
         <h1>Hello</h1>
         <p>Login to play</p>
         <form method="get" actioin="play.html">
-            <label for="name">Name</label>
-            <input type="text" id="name" placeholder="Name Here"/>
-            <button type="submit">Login</button>
+          <label for="name">Name</label>
+          <input type="text" id="name" placeholder="Name Here"/>
+          <button type="submit" class="btn btn-primary">Login</button>
         </form>
+      </div>
     </main>
 
-    <footer>
-        <hr/>
+    <footer class="bg-dark text-dark text-muted">
+      <div class="container-fluid">
         <span class="text-reset">Freddy </span>
-        <br/>
-        <a href="https://github.com/Freddy-Rios/simon.git">GitHub</a>
-    </footer>
+        <a 
+        class="text-reset"
+        href="https://github.com/Freddy-Rios/simon.git">GitHub</a>
+      </div>
+  </footer>
 </body>
 </html>
