--- a/play.html
+++ b/play.html
@@ -15,101 +15,120 @@
     crossorigin="anonymous"/>
 </head>
 <body class="bg-dark text-light">
-    <header class="contanier-fluid">
+  <header class="container-fluid">
 
-        <nav class="navbar fixed-top navbar-dark">
-          <a class="navbar-brand" href="#">Simon<sup>&reg;</sup></a>
-          <menu class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="play.html">Play</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="scores.html">Scores</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="about.html">About</a>
-            </li>
-          </menu>
-      </nav>
-    </header>
+    <nav class="navbar fixed-top navbar-dark">
+      <a class="navbar-brand" href="#">Simon<sup>&reg;</sup></a>
+      <menu class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="play.html">Play</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="scores.html">Scores</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="about.html">About</a>
+        </li>
+      </menu>
+  </nav>
+  </header>
 
-    <main>
-        <div class="players">
-            Player:
-            <span class="player-name">Mystery Player</span>
+    <main class="bg-secondary">
+      <div class="players">
+        Player:
+        <span class="player-name">Mystery player</span>
+      </div>
+      <div class="game">
+        <div class="button-container">
+          <button class="button-top-left"></button>
+          <button class="button-top-right"></button>
+          <button class="button-bottom-left"></button>
+          <button class="button-bottom-right"></button>
+          <div class="control center">
+            <div class="game-name">Simon<sup>&reg;</sup></div>
+            <div class="score center">--</div>
+            <button class="btn btn-primary">Reset</button>
+          </div>
         </div>
-        <br/>
-        <div>
-            <label for="count">Score</label>
-            <input type="text" id="count" value="--" readonly />
-        </div>
-        <br/>
-        <div>
-            <button>Reset</button>
-        </div>
-        <br/>
-        <div>
-            <table>
-                <tr>
-                    <td>
-                        <button>
-                            <svg
-                            aria-hidden="true"
-                            viewBox="0 0 100 100"
-                            height="100"
-                            width="100">
-                                <path d="M 95,5 95,95 5,95 Q 5,5 95,5" fill="green" />
-                            </svg>
-                        </button>
-                    </td>
-                    <td>
-                        <button>
-                            <svg
-                            aria-hidden="true"
-                            viewBox="0 0 100 100"
-                            height="100"
-                            width="100">
-                                <path d="M5,5 5,95 95,95 Q 95,5 5,5" fill="red"/>
-                            </svg>
-                        </button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <button>
-                            <svg
-                            aria-hidden="true"
-                            viewBox="0 0 100 100"
-                            height="100"
-                            width="100">
-                                <path d="M5,5 95,5 95,95 Q 5,95 5,5" fill="blue"/>
-                            </svg>
-                        </button>
-                    </td>
-                    <td>
-                        <button>
-                            <svg
-                            aria-hidden="true"
-                            viewBox="0 0 100 100"
-                            height="100"
-                            width="100">
-                                <path d="M95,5 5,5 5,95 Q 95,95 95,5" fill="yellow" />
-                            </svg>
-                        </button>
-                    </td>
-                </tr>
-            </table>
-        </div>
+      </div>
+
+      <!-- <div class="players">
+          Player:
+          <span class="player-name">Mystery Player</span>
+      </div>
+      <br/>
+      <div>
+          <label for="count">Score</label>
+          <input type="text" id="count" value="--" readonly />
+      </div>
+      <br/>
+      <div>
+          <button>Reset</button>
+      </div>
+      <br/>
+      <div>
+        <table>
+          <tr>
+            <td>
+              <button>
+                <svg
+                aria-hidden="true"
+                viewBox="0 0 100 100"
+                height="100"
+                width="100">
+                    <path d="M 95,5 95,95 5,95 Q 5,5 95,5" fill="green" />
+                </svg>
+              </button>
+            </td>
+            <td>
+              <button>
+                <svg
+                aria-hidden="true"
+                viewBox="0 0 100 100"
+                height="100"
+                width="100">
+                    <path d="M5,5 5,95 95,95 Q 95,5 5,5" fill="red"/>
+                </svg>
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <button>
+                <svg
+                aria-hidden="true"
+                viewBox="0 0 100 100"
+                height="100"
+                width="100">
+                    <path d="M5,5 95,5 95,95 Q 5,95 5,5" fill="blue"/>
+                </svg>
+              </button>
+            </td>
+            <td>
+              <button>
+                <svg
+                aria-hidden="true"
+                viewBox="0 0 100 100"
+                height="100"
+                width="100">
+                    <path d="M95,5 5,5 5,95 Q 95,95 95,5" fill="yellow" />
+                </svg>
+              </button>
+            </td>
+          </tr>
+        </table>
+      </div> -->
     </main>
-
-    <footer>
-        <hr/>
+    <footer class="bg-dark text-dark text-muted">
+      <div class="container-fluid">
         <span class="text-reset">Freddy </span>
-        <br/>
-        <a href="https://github.com/Freddy-Rios/simon.git">GitHub</a>
-    </footer>
+        <a 
+        class="text-reset"
+        href="https://github.com/Freddy-Rios/simon.git">GitHub</a>
+      </div>
+  </footer>
 </body>
 </html>
