--- a/play.html
+++ b/play.html
@@ -47,7 +47,7 @@
           <button class="button-top-right"></button>
           <button class="button-bottom-left"></button>
           <button class="button-bottom-right"></button>
-          <div class="control center">
+          <div class="controls center">
             <div class="game-name">Simon<sup>&reg;</sup></div>
             <div class="score center">--</div>
             <button class="btn btn-primary">Reset</button>
