intital start to html

--- a/scores.html
+++ b/scores.html
@@ -27,7 +27,7 @@
           <a class="nav-link" href="play.html">Play</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="scores.html">Scores</a>
+          <a class="nav-link active" href="scores.html">Scores</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="about.html">About</a>
@@ -46,20 +46,7 @@
             <th>Date</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>2</td>
-            <td>Annie James</td>
-            <td>29</td>
-            <td>June 2, 2021</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Gunter Spears</td>
-            <td>7</td>
-            <td>July 3, 2020</td>
-          </tr>
-        </tbody>
+        <tbody id="scores"></tbody>
       </table>
     </main>
 
@@ -71,5 +58,7 @@
           href="https://github.com/Freddy-Rios/simon.git">GitHub</a>
         </div>
     </footer>
+
+    <script src="scores.js"></script>
 </body>
 </html>
