--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a class="navbar-brand" href="#">Simon<sup>&reg;</sup></a>
       <menu class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link active" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="play.html">Play</a>
@@ -40,11 +40,10 @@
       <div>
         <h1>Hello</h1>
         <p>Login to play</p>
-        <form method="get" actioin="play.html">
-          <label for="name">Name</label>
-          <input type="text" id="name" placeholder="Name Here"/>
-          <button type="submit" class="btn btn-primary">Login</button>
-        </form>
+        <div>
+          <input type="text" id="name" placeholder="Your name here" />
+          <button class="btn btn-primary" onclick="login()"></button>
+        </div>
       </div>
     </main>
 
