--- a/play.html
+++ b/play.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="play.html">Play</a>
+          <a class="nav-link active" href="play.html">Play</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="scores.html">Scores</a>
@@ -39,88 +39,21 @@
     <main class="bg-secondary">
       <div class="players">
         Player:
-        <span class="player-name">Mystery player</span>
+        <span class="player-name"></span>
       </div>
       <div class="game">
         <div class="button-container">
-          <button class="button-top-left"></button>
-          <button class="button-top-right"></button>
-          <button class="button-bottom-left"></button>
-          <button class="button-bottom-right"></button>
+          <button id="green" class="game-button button-top-left" onclick="game.pressButton(this)"></button>
+          <button id="red" class="game-button button-top-right" onclick="game.pressButton(this)"></button>
+          <button id="yellow" class="game-button button-bottom-left" onclick="game.pressButton(this)"></button>
+          <button id="blue" class="game-button button-bottom-right" onclick="game.pressButton(this)"></button>
           <div class="controls center">
             <div class="game-name">Simon<sup>&reg;</sup></div>
-            <div class="score center">--</div>
-            <button class="btn btn-primary">Reset</button>
+            <div id="score" class="score center">--</div>
+            <button class="btn btn-primary" onclick="game.reset()">Reset</button>
           </div>
         </div>
-      </div>
-
-      <!-- <div class="players">
-          Player:
-          <span class="player-name">Mystery Player</span>
-      </div>
-      <br/>
-      <div>
-          <label for="count">Score</label>
-          <input type="text" id="count" value="--" readonly />
-      </div>
-      <br/>
-      <div>
-          <button>Reset</button>
-      </div>
-      <br/>
-      <div>
-        <table>
-          <tr>
-            <td>
-              <button>
-                <svg
-                aria-hidden="true"
-                viewBox="0 0 100 100"
-                height="100"
-                width="100">
-                    <path d="M 95,5 95,95 5,95 Q 5,5 95,5" fill="green" />
-                </svg>
-              </button>
-            </td>
-            <td>
-              <button>
-                <svg
-                aria-hidden="true"
-                viewBox="0 0 100 100"
-                height="100"
-                width="100">
-                    <path d="M5,5 5,95 95,95 Q 95,5 5,5" fill="red"/>
-                </svg>
-              </button>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <button>
-                <svg
-                aria-hidden="true"
-                viewBox="0 0 100 100"
-                height="100"
-                width="100">
-                    <path d="M5,5 95,5 95,95 Q 5,95 5,5" fill="blue"/>
-                </svg>
-              </button>
-            </td>
-            <td>
-              <button>
-                <svg
-                aria-hidden="true"
-                viewBox="0 0 100 100"
-                height="100"
-                width="100">
-                    <path d="M95,5 5,5 5,95 Q 95,95 95,5" fill="yellow" />
-                </svg>
-              </button>
-            </td>
-          </tr>
-        </table>
-      </div> -->
+      </div>   
     </main>
     <footer class="bg-dark text-dark text-muted">
       <div class="container-fluid">
@@ -130,5 +63,7 @@
         href="https://github.com/Freddy-Rios/simon.git">GitHub</a>
       </div>
   </footer>
+
+  <script src="play.js"></script>
 </body>
 </html>
