--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
   </nav>
   </header>
     
-    <main class="container-fluid bg-secondary text-center">
+  <main class="container-fluid bg-secondary text-center">
+    <div>
+      <h1>Welcome</h1>
+      <p>Login to play</p>
       <div>
-        <h1>Hello</h1>
-        <p>Login to play</p>
-        <div>
-          <input type="text" id="name" placeholder="Your name here" />
-          <button class="btn btn-primary" onclick="login()"></button>
-        </div>
+        <input type="text" id="name" placeholder="Your name here" />
+        <button class="btn btn-primary" onclick="login()">Login</button>
       </div>
-    </main>
+    </div>
+  </main>
 
     <footer class="bg-dark text-dark text-muted">
       <div class="container-fluid">
